--- a/manual/manual.bib
+++ b/manual/manual.bib
@@ -1,54 +1,4 @@
 
-@article{mcmahon_ad_2009,
-	title = {An ad hoc tight binding method to study the electronic structure of semiconducting polymers},
-	volume = {480},
-	issn = {0009-2614},
-	url = {http://www.sciencedirect.com/science/article/B6TFN-4X7R83W-1/2/81b66bde8a1bb45e2034af201f1416ec},
-	doi = {10.1016/j.cplett.2009.09.032},
-	abstract = {A linear-scaling method, based on the definition of a localized molecular orbital set, for the calculation of the electronic structure of a conjugated polymer, is presented and applied to substituted polythiophenes. The ability of this method to predict the localization of the electronic wave function due to structural disorder and to compute the density of states is evaluated. The method is particularly suitable for the analysis of the electronic structure of snapshots deriving from classical molecular dynamics simulations of polymers. We present one such analysis evaluating the effect of inter-chain coupling on the resulting density of states.},
-	number = {4-6},
-	urldate = {2011-03-31},
-	journal = {Chemical Physics Letters},
-	author = {{McMahon}, David P. and Troisi, Alessandro},
-	month = oct,
-	year = {2009},
-	pages = {210--214}
-},
-
-@article{chang_new_2005,
-	title = {A new formula to calculate Franck-Condon factors for displaced and distorted harmonic oscillators},
-	volume = {232},
-	issn = {0022-2852},
-	url = {http://www.sciencedirect.com/science/article/B6WK8-4FX109T-1/2/c3c89725bd6be49f5c922dda86172ae5},
-	doi = {10.1016/j.jms.2005.03.004},
-	abstract = {A new formula has been derived to calculate Franck-Condon factors for two harmonic oscillators with different equilibrium positions and different vibrational frequencies. The derivation is simple and straightforward, and a new expression for calculating the matrix element {\textless}vxnv'{\textgreater} has also been derived.},
-	number = {1},
-	urldate = {2011-04-28},
-	journal = {Journal of Molecular Spectroscopy},
-	author = {Chang, Jia-Lin},
-	month = jul,
-	year = {2005},
-	keywords = {Franck-Condon factors, Harmonic oscillators},
-	pages = {102--104}
-},
-
-@article{hoffman_reorganization_1996,
-	title = {Reorganization energies and rate constants for electron reactions in glass-forming media and proteins},
-	volume = {243},
-	issn = {0020-1693},
-	url = {http://www.sciencedirect.com/science/article/B6TG5-3VJRS7G-12/2/b4121fdcda5c41247efefd4b48d852fb},
-	doi = {10.1016/0020-1693(96)04913-4},
-	abstract = {{\textless}p{\textgreater}{\textless}br/{\textgreater}We discuss situations occurring in intramolecular electron transfer in glassy solvents and in proteins which themselves undergo glassing transitions. In these circumstances slow solvent relaxation causes the reaction pathway to vary substantially from the equilibrium reaction path, resulting in increased effective barriers and reduced effective outer-sphere reorganization energies compared to the transition-state (equilibrium) result. This effect is modelled simply by introducing a temperature dependent reorganization energy. Through inclusion of these non-equilibrium effects, sharp falloffs of electron transfer rate with decreasing temperature can be modelled with reasonable values of the equilibrium reorganization energy, rather than the inappropriately large values needed otherwise.{\textless}/p{\textgreater}},
-	number = {1-2},
-	urldate = {2011-03-29},
-	journal = {Inorganica Chimica Acta},
-	author = {Hoffman, Brian M. and Ratner, Mark A.},
-	month = feb,
-	year = {1996},
-	keywords = {Electron transfer, Glassy solvents, Reorganization energy, Solvent dynamics},
-	pages = {233--238}
-},
-
 @article{mcmahon_organic_2010,
 	title = {Organic Semiconductors: Impact of Disorder at Different Timescales},
 	volume = {11},
@@ -79,6 +29,22 @@
 	month = aug,
 	year = {1981},
 	pages = {341--350}
+},
+
+@article{mcmahon_ad_2009,
+	title = {An ad hoc tight binding method to study the electronic structure of semiconducting polymers},
+	volume = {480},
+	issn = {0009-2614},
+	url = {http://www.sciencedirect.com/science/article/B6TFN-4X7R83W-1/2/81b66bde8a1bb45e2034af201f1416ec},
+	doi = {10.1016/j.cplett.2009.09.032},
+	abstract = {A linear-scaling method, based on the definition of a localized molecular orbital set, for the calculation of the electronic structure of a conjugated polymer, is presented and applied to substituted polythiophenes. The ability of this method to predict the localization of the electronic wave function due to structural disorder and to compute the density of states is evaluated. The method is particularly suitable for the analysis of the electronic structure of snapshots deriving from classical molecular dynamics simulations of polymers. We present one such analysis evaluating the effect of inter-chain coupling on the resulting density of states.},
+	number = {4-6},
+	urldate = {2011-03-31},
+	journal = {Chemical Physics Letters},
+	author = {{McMahon}, David P. and Troisi, Alessandro},
+	month = oct,
+	year = {2009},
+	pages = {210--214}
 },
 
 @article{kirkpatrick_approximate_2008,
@@ -178,6 +144,20 @@
 	month = jan,
 	year = {1993},
 	pages = {15--56}
+},
+
+@article{valeev_effect_2006,
+	title = {Effect of Electronic Polarization on Charge-Transport Parameters in Molecular Organic Semiconductors},
+	volume = {128},
+	url = {http://dx.doi.org/10.1021/ja061827h},
+	doi = {10.1021/ja061827h},
+	abstract = {Theoretical investigations of charge transport in organic materials are generally based on the energy splitting in dimer method and routinely assume that the transport parameters (site energies and transfer integrals) determined from monomer and dimer calculations can be reliably used to describe extended systems. Here, we demonstrate that this transferability can fail even in molecular crystals with weak van der Waals intermolecular interactions, due to the substantial (but often ignored) impact of polarization effects, particularly on the site energies. We show that the neglect of electronic polarization leads to qualitatively incorrect values and trends for the transfer integrals computed with the energy splitting method, even in simple prototypes such as ethylene or pentacene dimers. The polarization effect in these systems is largely electrostatic in nature and can change dramatically upon transition from a dimer to an extended system. For example, the difference in site energy for a prototypical face-to-edge one-dimensional stack of pentacene molecules is calculated to be 30\% greater than that in the face-to-edge dimer, whereas the site energy difference in the pentacene crystal is vanishingly small. Importantly, when computed directly in the framework of localized monomer orbitals, the transfer integral values for dimer and extended systems are very similar.},
+	number = {30},
+	urldate = {2009-09-03},
+	journal = {Journal of the American Chemical Society},
+	author = {Valeev, Edward F. and Coropceanu, Veaceslav and da Silva Filho, Demetrio A. and Salman, Seyhan and Br{\'e}das, Jean-Luc},
+	year = {2006},
+	pages = {9882--9886}
 },
 
 @article{lukyanov_extracting_2010,
@@ -307,6 +287,23 @@
 	year = {1995}
 },
 
+@article{chang_new_2005,
+	title = {A new formula to calculate Franck-Condon factors for displaced and distorted harmonic oscillators},
+	volume = {232},
+	issn = {0022-2852},
+	url = {http://www.sciencedirect.com/science/article/B6WK8-4FX109T-1/2/c3c89725bd6be49f5c922dda86172ae5},
+	doi = {10.1016/j.jms.2005.03.004},
+	abstract = {A new formula has been derived to calculate Franck-Condon factors for two harmonic oscillators with different equilibrium positions and different vibrational frequencies. The derivation is simple and straightforward, and a new expression for calculating the matrix element {\textless}vxnv'{\textgreater} has also been derived.},
+	number = {1},
+	urldate = {2011-04-28},
+	journal = {Journal of Molecular Spectroscopy},
+	author = {Chang, Jia-Lin},
+	month = jul,
+	year = {2005},
+	keywords = {Franck-Condon factors, Harmonic oscillators},
+	pages = {102--104}
+},
+
 @article{bortz_new_1975,
 	title = {A new algorithm for Monte Carlo simulation of Ising spin systems},
 	volume = {17},
@@ -320,7 +317,8 @@
 	author = {Bortz, A. B. and Kalos, M. H. and Lebowitz, J. L.},
 	month = jan,
 	year = {1975},
-	pages = {10--18}
+	pages = {10--18},
+	file = {ScienceDirect Snapshot:/people/thnfs/homes/poelking/.mozilla/firefox/e0b7rg1e.default/zotero/storage/3HXA6S38/science.html:text/html}
 },
 
 @article{troisi_charge-transport_2006,
@@ -348,7 +346,8 @@
 	journal = {The Journal of Chemical Physics},
 	author = {Vukmirovi{\'c}, Nenad and Wang, Lin-Wang},
 	year = {2008},
-	pages = {121102}
+	pages = {121102},
+	file = {GetPDFServlet.pdf:/people/thnfs/homes/poelking/.mozilla/firefox/e0b7rg1e.default/zotero/storage/5JNEJTRX/GetPDFServlet.pdf:application/pdf}
 },
 
 @article{kirkpatrick_columnar_2008,
@@ -519,6 +518,23 @@
 	pages = {14573--14576}
 },
 
+@article{hoffman_reorganization_1996,
+	title = {Reorganization energies and rate constants for electron reactions in glass-forming media and proteins},
+	volume = {243},
+	issn = {0020-1693},
+	url = {http://www.sciencedirect.com/science/article/B6TG5-3VJRS7G-12/2/b4121fdcda5c41247efefd4b48d852fb},
+	doi = {10.1016/0020-1693(96)04913-4},
+	abstract = {{\textless}p{\textgreater}{\textless}br/{\textgreater}We discuss situations occurring in intramolecular electron transfer in glassy solvents and in proteins which themselves undergo glassing transitions. In these circumstances slow solvent relaxation causes the reaction pathway to vary substantially from the equilibrium reaction path, resulting in increased effective barriers and reduced effective outer-sphere reorganization energies compared to the transition-state (equilibrium) result. This effect is modelled simply by introducing a temperature dependent reorganization energy. Through inclusion of these non-equilibrium effects, sharp falloffs of electron transfer rate with decreasing temperature can be modelled with reasonable values of the equilibrium reorganization energy, rather than the inappropriately large values needed otherwise.{\textless}/p{\textgreater}},
+	number = {1-2},
+	urldate = {2011-03-29},
+	journal = {Inorganica Chimica Acta},
+	author = {Hoffman, Brian M. and Ratner, Mark A.},
+	month = feb,
+	year = {1996},
+	keywords = {Electron transfer, Glassy solvents, Reorganization energy, Solvent dynamics},
+	pages = {233--238}
+},
+
 @article{coropceanu_charge_2007,
 	title = {Charge Transport in Organic Semiconductors},
 	volume = {107},
@@ -579,44 +595,95 @@
 	pages = {134103}
 },
 
-@book{may_charge_2011,
-	edition = {3rd, Revised and Enlarged Edition},
-	title = {Charge and Energy Transfer Dynamics in Molecular Systems},
-	isbn = {3527407324},
-	publisher = {Wiley-{VCH}},
-	author = {May, Volkhard and K{\"u}hn, Oliver},
+@article{breneman_determining_1990,
+	title = {Determining atom-centered monopoles from molecular electrostatic potentials. The need for high sampling density in formamide conformational analysis},
+	volume = {11},
+	copyright = {Copyright {\textcopyright} 1990 John Wiley \& Sons, Inc.},
+	issn = {1096-{987X}},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/jcc.540110311/abstract},
+	doi = {10.1002/jcc.540110311},
+	abstract = {An improved method for computing potential-derived charges is described which is based upon the {CHELP} program available from {QCPE.1} This approach ({CHELPG)} is shown to be considerably less dependent upon molecular orientation than the original {CHELP} program. In the second part of this work, the {CHELPG} point selection algorithm was used to analyze the changes in the potential-derived charges in formamide during rotation about the {C?N} bond. In order to achieve a level of rotational invariance less than 10\% of the magnitude of the electronic effects studied, an equally-spaced array of points 0.3 {\r A} apart was required. Points found to be greater than 2.8 {\r A} from any nucleus were eliminated, along with all points contained within the defined {VDW} distances from each of the atoms. The results are compared to those obtained by using {CHELP.} Even when large numbers of points (ca. 3000) were sampled using the {CHELP} selection routine, the results did not indicate a satisfactory level of rotatational invariance. On the basis of these results, the original {CHELP} program was found to be inadequate for analyzing internal rotations.},
+	language = {en},
+	number = {3},
+	urldate = {2012-12-17},
+	journal = {Journal of Computational Chemistry},
+	author = {Breneman, Curt M. and Wiberg, Kenneth B.},
+	year = {1990},
+	pages = {361{\textendash}373},
+	file = {Snapshot:/people/thnfs/homes/poelking/.mozilla/firefox/e0b7rg1e.default/zotero/storage/BQZ5ITAV/abstract.html:text/html}
+},
+
+@article{ren_polarizable_2003,
+	title = {Polarizable Atomic Multipole Water Model for Molecular Mechanics Simulation},
+	volume = {107},
+	issn = {1520-6106},
+	url = {http://dx.doi.org/10.1021/jp027815+},
+	doi = {10.1021/jp027815+},
+	abstract = {A new classical empirical potential is proposed for water. The model uses a polarizable atomic multipole description of electrostatic interactions. Multipoles through the quadrupole are assigned to each atomic center based on a distributed multipole analysis ({DMA)} derived from large basis set molecular orbital calculations on the water monomer. Polarization is treated via self-consistent induced atomic dipoles. A modified version of Thole's interaction model is used to damp induction at short range. Repulsion?dispersion ({vdW)} effects are computed from a buffered 14?7 potential. In a departure from most current water potentials, we find that significant {vdW} parameters are necessary on hydrogen as well as oxygen. The new potential is fully flexible and has been tested versus a variety of experimental data and quantum calculations for small clusters, liquid water, and ice. Overall, excellent agreement with experimental and high level ab initio results is obtained for numerous properties, including cluster structures and energetics and bulk thermodynamic and structural measures. The parametrization scheme described here is easily extended to other molecular systems, and the resulting water potential should provide a useful explicit solvent model for organic solutes and biopolymer modeling.},
+	number = {24},
+	urldate = {2013-01-02},
+	journal = {The Journal of Physical Chemistry B},
+	author = {Ren, Pengyu and Ponder, Jay W.},
+	month = jun,
+	year = {2003},
+	pages = {5933--5947},
+	file = {ACS Full Text Snapshot:/people/thnfs/homes/poelking/.mozilla/firefox/e0b7rg1e.default/zotero/storage/74U6ZV3Q/jp027815+.html:text/html}
+},
+
+@article{singh_approach_1984,
+	title = {An approach to computing electrostatic charges for molecules},
+	volume = {5},
+	issn = {0192-8651, 1096-{987X}},
+	url = {http://doi.wiley.com/10.1002/jcc.540050204},
+	doi = {10.1002/jcc.540050204},
+	number = {2},
+	urldate = {2013-01-02},
+	journal = {Journal of Computational Chemistry},
+	author = {Singh, U. Chandra and Kollman, Peter A.},
 	month = apr,
-	year = {2011}
+	year = {1984},
+	pages = {129--145}
 },
 
-@article{valeev_effect_2006,
-	title = {Effect of Electronic Polarization on Charge-Transport Parameters in Molecular Organic Semiconductors},
-	volume = {128},
-	url = {http://dx.doi.org/10.1021/ja061827h},
-	doi = {10.1021/ja061827h},
-	abstract = {Theoretical investigations of charge transport in organic materials are generally based on the energy splitting in dimer method and routinely assume that the transport parameters (site energies and transfer integrals) determined from monomer and dimer calculations can be reliably used to describe extended systems. Here, we demonstrate that this transferability can fail even in molecular crystals with weak van der Waals intermolecular interactions, due to the substantial (but often ignored) impact of polarization effects, particularly on the site energies. We show that the neglect of electronic polarization leads to qualitatively incorrect values and trends for the transfer integrals computed with the energy splitting method, even in simple prototypes such as ethylene or pentacene dimers. The polarization effect in these systems is largely electrostatic in nature and can change dramatically upon transition from a dimer to an extended system. For example, the difference in site energy for a prototypical face-to-edge one-dimensional stack of pentacene molecules is calculated to be 30\% greater than that in the face-to-edge dimer, whereas the site energy difference in the pentacene crystal is vanishingly small. Importantly, when computed directly in the framework of localized monomer orbitals, the transfer integral values for dimer and extended systems are very similar.},
-	number = {30},
-	urldate = {2009-09-03},
-	journal = {Journal of the American Chemical Society},
-	author = {Valeev, Edward F. and Coropceanu, Veaceslav and da Silva Filho, Demetrio A. and Salman, Seyhan and Br{\'e}das, Jean-Luc},
-	year = {2006},
-	pages = {9882--9886}
+@book{stone_theory_1997,
+	address = {Oxford},
+	title = {The Theory of intermolecular forces},
+	isbn = {{019855883X}  9780198558835},
+	language = {English},
+	publisher = {Clarendon Press},
+	author = {Stone, A. J},
+	year = {1997}
 },
 
-@article{stone_distributed_2005,
-	title = {Distributed Multipole Analysis:  Stability for Large Basis Sets},
-	volume = {1},
-	issn = {1549-9618},
-	shorttitle = {Distributed Multipole Analysis},
-	url = {http://dx.doi.org/10.1021/ct050190+},
-	doi = {10.1021/ct050190+},
-	abstract = {The distributed multipole analysis procedure, for describing a molecular charge distribution in terms of multipole moments on the individual atoms (or other sites) of the molecule, is not stable with respect to a change of basis set, and indeed, the calculated moments change substantially and unpredictably when the basis set is improved, even though the resulting electrostatic potential changes very little. A revised procedure is proposed, which uses grid-based quadrature for partitioning the contributions to the charge density from diffuse basis functions. The resulting procedure is very stable, and the calculated multipole moments converge rapidly to stable values as the size of the basis is increased.
-The distributed multipole analysis procedure, for describing a molecular charge distribution in terms of multipole moments on the individual atoms (or other sites) of the molecule, is not stable with respect to a change of basis set, and indeed, the calculated moments change substantially and unpredictably when the basis set is improved, even though the resulting electrostatic potential changes very little. A revised procedure is proposed, which uses grid-based quadrature for partitioning the contributions to the charge density from diffuse basis functions. The resulting procedure is very stable, and the calculated multipole moments converge rapidly to stable values as the size of the basis is increased.},
+@article{stone_distributed_1985,
+	title = {Distributed multipole analysis},
+	volume = {56},
+	issn = {0026-8976, 1362-3028},
+	url = {http://www.tandfonline.com/doi/abs/10.1080/00268978500102891},
+	doi = {10.1080/00268978500102891},
+	number = {5},
+	urldate = {2013-03-14},
+	journal = {Molecular Physics},
+	author = {Stone, {A.J.} and Alderton, M.},
+	month = dec,
+	year = {1985},
+	pages = {1047--1064}
+},
+
+@article{chirlian_atomic_1987,
+	title = {Atomic charges derived from electrostatic potentials: A detailed study},
+	volume = {8},
+	issn = {0192-8651, 1096-{987X}},
+	shorttitle = {Atomic charges derived from electrostatic potentials},
+	url = {http://doi.wiley.com/10.1002/jcc.540080616},
+	doi = {10.1002/jcc.540080616},
 	number = {6},
-	journal = {J. Chem. Theory Comput.},
-	author = {Stone, Anthony J.},
-	year = {2005},
-	pages = {1128--1132}
+	urldate = {2013-03-14},
+	journal = {Journal of Computational Chemistry},
+	author = {Chirlian, Lisa Emily and Francl, Michelle Miller},
+	month = sep,
+	year = {1987},
+	pages = {894--905}
 },
 
 @article{ruhle_microscopic_2011,
@@ -632,4 +699,21 @@ Charge carrier dynamics in an organic semiconductor can often be described in te
 	author = {R{\"u}hle, Victor and Lukyanov, Alexander and May, Falk and Schrader, Manuel and Vehoff, Thorsten and Kirkpatrick, James and Baumeier, Bj{\"o}rn and Andrienko, Denis},
 	year = {2011},
 	pages = {3335--3345}
+},
+
+@article{stone_distributed_2005,
+	title = {Distributed Multipole Analysis:  Stability for Large Basis Sets},
+	volume = {1},
+	issn = {1549-9618},
+	shorttitle = {Distributed Multipole Analysis},
+	url = {http://dx.doi.org/10.1021/ct050190+},
+	doi = {10.1021/ct050190+},
+	abstract = {The distributed multipole analysis procedure, for describing a molecular charge distribution in terms of multipole moments on the individual atoms (or other sites) of the molecule, is not stable with respect to a change of basis set, and indeed, the calculated moments change substantially and unpredictably when the basis set is improved, even though the resulting electrostatic potential changes very little. A revised procedure is proposed, which uses grid-based quadrature for partitioning the contributions to the charge density from diffuse basis functions. The resulting procedure is very stable, and the calculated multipole moments converge rapidly to stable values as the size of the basis is increased.
+The distributed multipole analysis procedure, for describing a molecular charge distribution in terms of multipole moments on the individual atoms (or other sites) of the molecule, is not stable with respect to a change of basis set, and indeed, the calculated moments change substantially and unpredictably when the basis set is improved, even though the resulting electrostatic potential changes very little. A revised procedure is proposed, which uses grid-based quadrature for partitioning the contributions to the charge density from diffuse basis functions. The resulting procedure is very stable, and the calculated multipole moments converge rapidly to stable values as the size of the basis is increased.},
+	number = {6},
+	journal = {J. Chem. Theory Comput.},
+	author = {Stone, Anthony J.},
+	year = {2005},
+	pages = {1128--1132},
+	file = {ACS Full Text Snapshot:/people/thnfs/homes/poelking/.mozilla/firefox/e0b7rg1e.default/zotero/storage/SH532C2T/ct050190+.html:text/html}
 }
