--- a/manual/theory/thole.tex
+++ b/manual/theory/thole.tex
@@ -1,24 +1,29 @@
-\subsection{Thole model}
+\subsection{Induction energy - the Thole model}
 \label{sec:thole_model}
 \index{Thole model}
 \index{site energy!polarization}
 
-\textbf{Warning:}
-This chapter includes two pictures and references to prevous
-formulas (from prevous chapters of theses) which are not
-included.
+
+If we in addition to the permanent set of multipole moments $\{Q_t^a\}$ allow for induced moments $\{\Delta Q_t^a\}$ and penalize their generation with a bilinear form (giving rise to a strictly positive contribution to the energy),
+\begin{align}
+U_\textrm{int} &=\frac{1}{2} \sum_A \Delta Q_t^a \eta_{tt'}^{aa'} \Delta Q_{t'}^{a'},
+\end{align}
+it can be shown that the induction contribution to the site energy evaluates to an expression where all interactions between induced moments have cancelled out, and interactions between permanent and induced moments are scaled down by $1/2$~\cite{stone_theory_1997}:
+\begin{align}
+U_{pu} = \frac{1}{2} \sum_A \sum_{B > A} \left[ \Delta Q_t^a T_{tu}^{ab} Q_u^b + \Delta Q_t^b T_{tu}^{ab} Q_u^a \right].
+\label{equ:u_pu}
+\end{align}
+This term can be viewed as the second-order (induction) correction to the molecular interaction energy. The sets of $\{Q_t^a\}$ are solved for self-consistently via
+\begin{align}
+\Delta Q_t^a = - \sum_{B \neq A} \alpha_{tt'}^{aa'} T_{t'u}^{a'b} (Q_u^b + \Delta Q_u^b),
+\label{equ:self_consistent_dQ}
+\end{align}
+where the polarizability tensors $\alpha_{tt'}^{aa'}$ are given by the inverse of $\eta_{tt'}^{aa'}$.
 
 
-% \begin{figure*}
-%     \includegraphics[width=\linewidth]{3_free_energy/fig/smearing_pictures/dipole}
-%     \caption{ (a) Thole's modified dipole-dipole interaction model~\cite{thole_molecular_1981}: A fractional charge density $\rho_f(\vec{R})$ removes the divergent head-to-tail interaction that can arise from point-dipole interactions on a molecular scale. (b) The charge densities on the carbon and oxygen atom in the CO molecule are intimately and quantum-mechanically linked, giving rise to a positive site-site polarizability $\alpha_{xx}^\textrm{CO}$, where the x-axis is oriented perpendicular to the CO bond vector. (c) In point-dipole interaction models, the induced dipoles interact with each other only via their fields, leading to an effectively anticorrelated and unphysical site-site response in the CO molecule, $\alpha_{xx}^\textrm{CO} < 0$. }
-%     \label{fig:ch4_damping}
-% \end{figure*}
+With eqs.~\ref{equ:self_consistent_dQ} and~\ref{equ:u_pu} we have at hand expressions that allow us to compute the induction energy contribution to site energies in an iterative manner based on a set of molecular distributed multipoles $\{Q_t^a\}$ and polarizabilities $\{\alpha_{tt'}^{aa'}\}$. We have drafted in the previous section how to obtain the former from a wavefunction decomposition or fitting scheme (GDMA, CHELPG). The $\{\alpha_{tt'}^{aa'}\}$ can be derived formally (or rather: read off) from a perturbative expansion of the molecular interaction. In this work we make use of the Thole model~\cite{thole_molecular_1981, van_duijnen_molecular_1998} as a semi-empirical approach to obtain the sought-after point polarizabilities in the local dipole approximation, that is, $[\alpha_{tt'}^{aa'}] = \alpha_{tt'}^{aa'} \delta_{t \beta} \delta_{t'\beta} \delta_{aa'}$, where $\beta \epsilon \{x,y,z\}$ references the dipole-moment component.
 
-With eqs.~\ref{equ:self_consistent_dQ} and~\ref{equ:uppuu} we have developed expressions that allow us to compute the electrostatic and induction energy contribution to site energies in a self-consistent manner based on a set of molecular distributed multipoles $\{Q_t^a\}$ and polarizabilities $\{\alpha_{tt'}^{aa'}\}$. We have shown how to obtain the former from a wavefunction decomposition or fitting scheme (GDMA, CHELPG) in sec.~\ref{sec:distributed_multipoles}. The $\{\alpha_{tt'}^{aa'}\}$ are formally given by eq.~\ref{equ:pol_multi_point}; this expression is somewhat impractical (though possible, see~\cite{stone_distributed_1985}) to evaluate. In this work we make use of the Thole model~\cite{thole_molecular_1981, van_duijnen_molecular_1998} as a semi-empirical approach to obtain the sought-after point polarizabilities in the local dipole approximation, that is, $[\alpha_{tt'}^{aa'}] = \alpha_{tt'}^{aa'} \delta_{t \beta} \delta_{t'\beta} \delta_{aa'}$, where $\beta \epsilon \{x,y,z\}$ references the 
-dipole-moment component.
-
-The Thole model is based on a modified dipole-dipole interaction, which can be reformulated in terms of the interaction of smeared charge densities. This has been shown to be necessary due to the divergent head-to-tail dipole-dipole interaction that otherwise results at small interseparations on the \AA~scale~\cite{applequist_atom_1972, thole_molecular_1981, van_duijnen_molecular_1998}. Smearing out the charge distribution mimics the nature of the QM wavefunction, which effectively guards against this unphysical polarization catastrophe. 
+The Thole model is based on a modified dipole-dipole interaction, which can be reformulated in terms of the interaction of smeared charge densities. This has been shown to be necessary due to the divergent head-to-tail dipole-dipole interaction that otherwise results at small interseparations on the \AA~scale~\cite{applequist_atom_1972, thole_molecular_1981, van_duijnen_molecular_1998}. Smearing out the charge distribution mimics the nature of the QM wavefunction, which effectively guards against this unphysical polarization catastrophe. Since the point dipoles however only react individually to the external field, any correlation effects as were still accounted for in the $\{\alpha_{tt'}^{aa'}\}$ are lost, except perhaps those correlations that are due to the mere classical field interaction.
 
 The smearing of the nuclei-centered multipole moments is obtained via a fractional charge density $\rho_f(\vec{u})$ which should be normalized to unity and fall off rapidly as of a certain radius $\vec{u} = \vec{u}(\vec{R})$. The latter is related to the physical distance vector $\vec{R}$ connecting two interacting sites via a linear scaling factor that takes into account the magnitude of the isotropic site polarizabilities $\alpha^a$. This isotropic fractional charge density gives rise to a modified potential
 \begin{align}
@@ -33,36 +38,18 @@ where the specific form of $f(\alpha^a \alpha^b)$ results from the choice of $u(
 \begin{align}
  t_{ij \dots}(\vec{u}) = - \partial_{u_i} \partial_{u_j} \dots \phi(\vec{u}).
 \end{align}
-It turns out that for a suitable choice of $\rho_f(\vec{u})$, the modified interaction tensors can be rewritten in such a way that powers $n$ of the distance $R = |\vec{R}|$ are damped with a damping function $\lambda_n(\vec{u}(\vec{R}))$~\cite{ren_polarizable_2003}. 
+It turns out that for a suitable choice of $\rho_f(\vec{u})$, the modified interaction tensors can be rewritten in such a way that powers $n$ of the distance $R = |\vec{R}|$ are damped with a damping function $\lambda_n(\vec{u}(\vec{R}))$~\cite{ren_polarizable_2003}.
 
 There is a large number of fractional charge densities $\rho_f(\vec{u})$ that have been tested for the purpose of giving best results for the molecular polarizability as well as interaction energies. Note how a great advantage of the Thole model is the exceptional transferability of the atomic polarizabilities to compounds not used for the fitting procedure~\cite{van_duijnen_molecular_1998}. In fact, for most organic molecules, a fixed set of atomic polarizabilities ($\alpha_C = 1.334$, $\alpha_H = 0.496$, $\alpha_N = 1.073$, $\alpha_O = 0.873$, $\alpha_S = 2.926$ \AA$^3$) based on atomic elements yields satisfactory results.
 
-In this work, we will use the Thole model with an exponentially-decaying fractional charge density
+VOTCA implements the Thole model with an exponentially-decaying fractional charge density
 \begin{align}
  \rho(u) = \frac{3a}{4\pi} \exp(-au^3),
 \end{align}
-where $\vec{u}(\vec{R},\alpha^a \alpha^b) = \vec{R} / (\alpha^a \alpha^b)^{1/6}$ and the smearing exponent $a=0.39$, as used in the AMOEBA force field~\cite{ren_polarizable_2003}. The distance at which the charge-dipole interaction is reduced by a factor $\gamma$ is then given by
-\begin{align}
- R_\gamma & = \left[ \frac{1}{a} \ln\left(\frac{1}{1-\gamma}\right) \right]^{1/3} (\alpha_i\alpha_j)^{1/6}.
- \label{equ:screening_radius}
-\end{align}
-The interaction damping radius associated with $\gamma=1/2$ ranges around an interaction distance of \unit[2]{\AA} as shown in fig.~\ref{fig:ch4_damping_function}a as a function of the homonuclear polarizability $\alpha_{ij} = \alpha_i = \alpha_j$ and different smearing exponents $a$. A half-interaction distance on this range indicates how damping is primarily important for the intramolecular field interaction of induced dipoles. 
+where $\vec{u}(\vec{R},\alpha^a \alpha^b) = \vec{R} / (\alpha^a \alpha^b)^{1/6}$ and the smearing exponent $a=0.39$ (which can however be changed from the program options), as used in the AMOEBA force field~\cite{ren_polarizable_2003}.
 
-% \begin{figure*}
-%     \includegraphics[width=\linewidth]{3_free_energy/fig/damping_functions_summary/summary}
-%     \caption{ (a) Dependence of the half-interaction radius $R_{1/2}$ evaluated from eq.~\ref{equ:screening_radius} for different smearing parameters $a$. Typical atomic point polarizabilties are of the order of \unit[1]{\AA} to \unit[2]{\AA}. The half-interaction radius indicates how damping is important primarily for the intramolecular field interaction between induced dipoles. (b) Molecular isotropic polarizability of a C60 molecule for the neutral ($\alpha_N$) and cationic ($\alpha_C$) state. The minimum develops in dependence on $a$ due to the cross-over from point polarizabilities responding to the external field as isolated quantities to cooperatively coupled polar sites. (c) Induction stabilization of a neutral C60 molecule due to the presence of a point charge compared to DFT-B3LYP/6-311g (horizontal lines). }
-%     \label{fig:ch4_damping_function}
-% \end{figure*}
+\votcacommand{Generate Thole polarizabilites for a segment}{\cmdmolpol}
 
-The influence of the smearing parameter on the molecular polarizability $\alpha_N, \alpha_C$ is shown in fig.~\ref{fig:ch4_damping_function}b for the neutral (N) and cation (C) state of a C60 molecule. It can be seen how in particular a very strong smearing (obtained for small $a$) leads to overestimated molecular polarizabilities, since the point polarizabilities cease to interact via their fields, and instead respond to the external field as isolated entities. The same trend is observed for the case of weak smearing ($a\sim 1$), where the interaction between point dipoles is unscreened, leading to strong cooperative effects.
+The electrostatic and induction contribution to the site energy is evaluated by the \calc{emultipole} \calculator. Atomistic partial charges for charged and neutral molecules are taken from .mps-files (GDMA format extended for polarizabilities) specified in the \xmlcsg files. Note that, in order to speed up calculations for both methods, a cutoff radius (for the molecular centers of mass) can be given in \xmloptions. Threaded execution is advised.
 
-The dependence on $a$ propagates to the response to inhomogeneous fields, fig.~\ref{fig:ch4_damping_function}c, where we have monitored the induction stabilization of a C60 molecule in the inhomogeneous external field generated by a point charge $q=-0.3\textrm{e}$ at a distance of \unit[4.5]{\AA} and \unit[8.5]{\AA} from the C60 center-of-mass, corresponding to distances of \unit[1]{\AA} and \unit[5]{\AA} from the C60 surface, respectively. We compare the resulting energies to energies obtained from DFT. It can be seen, how for intermolecular distances typical for van-der-Waals materials the dependence of the induction energy on the smearing parameter $a$ is small due to the plateau that develops around $a=0.39$, leading to good agreement between DFT and the Thole model.
-
-Finally, we touch on a well-known shortcoming of point-dipole interaction models when applied to molecular scales: Since the response of the charge density on neighboring atoms cannot usually be divided on the atoms due to the quantum-mechanical nature of the underlying wavefunction, the distortion of the local charge cloud shared by two interaction sites can be correlated to an extent that it is no longer appropriate to have the point dipoles only interact with each other via their electric fields. This is for instance observed for the CO molecule, fig.~\ref{fig:ch4_damping}b, where the distributed polarizability-scheme according to eq.~\ref{equ:pol_multi_point} predicts a positive site-site polarizability in the direction perpendicular to the molecular axis, whereas point-dipole models such as the Thole model necessarily produce an effective negative correlation between the induced dipoles due to the interaction via the dipole fields, see fig.~\ref{fig:ch4_damping}c.
-
-% Clausius-Mossotti
-%\begin{align}
-%\frac{\varepsilon_r -1}{\varepsilon_r +2} = \frac{4\pi n \alpha}{3} 
-%\end{align}
-
-% See the following reference for details~\cite{thole_molecular_1981}.
+\votcacommand{Electrostatic and induction corrections}{\cmdemlt}
