added reference to the topology xml file

--- a/inputfiles.tex
+++ b/inputfiles.tex
@@ -127,6 +127,8 @@ The box size can be set by the tag \texttt{box}:
 \end{lstlisting}
 where \texttt{xx, yy, zz} are the dimensions of the box.
 
+A complete reference for \xml topology file can be found in sec.~\ref{sec:ref_topol}.
+
 \section{Trajectories}
 \label{sec:trajectory}
 
