--- a/reference.tex
+++ b/reference.tex
@@ -8,6 +8,12 @@ The root node always has to be cg\_molecule. It can contain the following keywor
 
 \input{reference/xml/mapping.xml}
 
+\section{Topology file}
+\label{sec:ref_topology}
+The \xml topology file
+
+\input{reference/xml/topol.xml}
+
 \section{Settings file}
 All options for the iterative script are stored in an xml file.
 \label{sec:ref_options}
