--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -57,10 +57,10 @@ linkcolor=webgreen, %defined below
 filecolor=webbrown, %defined below
 citecolor=webgreen, %defined below
 urlcolor=magenta,
-pdftitle={VOTCA-CT manual},
+pdftitle={VOTCA-XTP manual},
 pdfauthor={},
-pdfsubject={VOTCA-CTP},
-pdfkeywords={charge transport organic semiconductors},
+pdfsubject={VOTCA-XTP},
+pdfkeywords={exciton transport organic semiconductors},
 bookmarksopen=false,
 pdfpagemode=UseNone]{hyperref}
 \usepackage[all]{hypcap}
@@ -161,7 +161,7 @@ pdfpagemode=UseNone]{hyperref}
 \input{reference/reference}
 
 %\appendix
-%\input{appendix/moo_standalone}
+%\input{appendix/xtp_standalone}
 
 \nolinenumbers
 
