--- a/manual/theory/analysis.tex
+++ b/manual/theory/analysis.tex
@@ -43,7 +43,7 @@ For a specific type of particles, the microscopic charge density of a site $i$ i
 \begin{equation}
  \rho_i = e p_i / V_i\, ,
 \end{equation}
-where,  for an irregular lattice, the effective volume $V_i$ can be obtained from a Voronoi tessellation of space. For reasonably uniform lattices (uniform site densities) this volume is almost independent of the site and a constant volume per cite, $V_i = V/N$, can be assumed.  In the macroscopic limit, the charge density can be calculated using a smoothing kernel function, i.e. a distance-weighted average over multiple sites. Site occupations $p_i$ can be obtained from \equ{ensemble} or  \equ{time} by using the occupation of site $i$ in state $\alpha$ as an observable.
+where,  for an irregular lattice, the effective volume $V_i$ can be obtained from a Voronoi tessellation of space. For reasonably uniform lattices (uniform site densities) this volume is almost independent of the site and a constant volume per cite, $V_i = V/N$, can be assumed.  In the macroscopic limit, the charge density can be calculated using a sxtpthing kernel function, i.e. a distance-weighted average over multiple sites. Site occupations $p_i$ can be obtained from \equ{ensemble} or  \equ{time} by using the occupation of site $i$ in state $\alpha$ as an observable.
 
 If the system is in thermodynamic equilibrium, that is without sources or sinks and without circular currents (and therefore no net flux) a condition, known as detailed balance, holds
 %
