--- a/manual/theory/gdma.tex
+++ b/manual/theory/gdma.tex
@@ -31,7 +31,7 @@ Second, we transfer the resulting $Q_{lk}[\vec{P}]$ to the position $\vec{S}$ of
 \begin{align}
  Q_{nm}[\vec{S}] = \sum_{l=0}^L \sum_{k=-l}^l \left[ \left(\begin{array}{c} n+m \\ l+k \end{array}\right)\left(\begin{array}{c} n-m \\ l-k \end{array}\right) \right]^{1/2} R_{n-l,m-k}(\vec{S}-\vec{P})\cdot Q_{lk}[\vec{P}].
 \end{align}
-Note how this requires a rule for the choice of the expansion site to which the multipole moment should be transferred. In the near past~\cite{stone_distributed_2005}, the nearest-site algorithm, which allocates the multipole moments to the site closest to the overlap center, was replaced for diffuse functions by an algorithm based on a smooth weighting function in conjunction with grid-based integration methods in order to decrease the basis-set dependence of the resulting set of distributed multipoles.
+Note how this requires a rule for the choice of the expansion site to which the multipole moment should be transferred. In the near past~\cite{stone_distributed_2005}, the nearest-site algorithm, which allocates the multipole moments to the site closest to the overlap center, was replaced for diffuse functions by an algorithm based on a sxtpth weighting function in conjunction with grid-based integration methods in order to decrease the basis-set dependence of the resulting set of distributed multipoles.
 
 One important advantage of the DMA approach over fitting algorithms such as CHELPG or Merz-Kollman (MK) is that higher-order moments can also be derived without too large an ambiguity.
 
