--- a/manual/theory/fragments.tex
+++ b/manual/theory/fragments.tex
@@ -17,21 +17,21 @@ In the case of a conjugated polymer, one molecule can consist of several conjuga
 
 After partitioning, an additional step is often required to remove bond length fluctuations introduced by molecular dynamics simulations, since they are already integrated out in the derivation of the rate expression. This is achieved by substituting respective molecular fragments with  rigid, planar $\pi$-systems\index{rigid fragment} optimized using first-principles methods. Centers of mass and gyration tensors are used to align rigid fragments, though a custom definition of local axes is also possible. Such a procedure also minimizes discrepancies between the force-field and first-principles-based ground state geometries of conjugated segments, which might be important for calculations of electronic couplings, reorganization energies, and intramolecular driving forces. 
 
-To partition the system on hopping sites and substitute rigid fragments with the corresponding ground-state geometries \ctpmap program is used:
+To partition the system on hopping sites and substitute rigid fragments with the corresponding ground-state geometries \xtpmap program is used:
 \votcacommand{Mapping the \gromacs trajectory}{\cmdmap}
 It reads in the \gromacs topology (\topology) and trajectory (\trajectory) files, definitions of conjugated segments and rigid fragments (\xmlcsg) and outputs coordinates of conjugated segments (hopping sites) and rigid fragments (as provided in the MD trajectory and after rigidification) to the  state file (\sqlstate). In order to do this, a mapping file \xmlcsg has to be provided, which specifies the corresponding atoms in the different representations. After this step, all information (frame number, dimensions of the simulation box, etc) are stored in the \slink{statefile}{state file} and only this file is used for further calculations.
 
-\attention{\votcactp requires a wrapped trajectory for mapping the segments and fragments, so all molecules should be whole in the frame.}   
+\attention{\votcaxtp requires a wrapped trajectory for mapping the segments and fragments, so all molecules should be whole in the frame.}   
 
-In order to visually check the mapping one can use either the \calc{tdump} \calculator or the programm \ctpdump with the calculator \calc{trajectory2pdb}.
+In order to visually check the mapping one can use either the \calc{tdump} \calculator or the programm \xtpdump with the calculator \calc{trajectory2pdb}.
 
-\label{sec:ctp_dump}
-\votcacommand{Writing a mapped trajectroy with \ctpdump}{\small \ctpdump \sql \sqlstate \exe \calc{trajectory2pdb} }
+\label{sec:xtp_dump}
+\votcacommand{Writing a mapped trajectroy with \xtpdump}{\small \xtpdump \sql \sqlstate \exe \calc{trajectory2pdb} }
 
-It reads in the state file created by \ctpmap and outputs two trajectory files corresponding to the original and rigidified atom coordinates. To check the mapping, it is useful to superimpose the three outputs (original atomistic, atomistic stored in the state file, and rigidified according to ground state geometries), e.g., with {\tt VMD}.
+It reads in the state file created by \xtpmap and outputs two trajectory files corresponding to the original and rigidified atom coordinates. To check the mapping, it is useful to superimpose the three outputs (original atomistic, atomistic stored in the state file, and rigidified according to ground state geometries), e.g., with {\tt VMD}.
 
 \label{sec:tdump}
-\votcacommand{Writing a mapped trajectroy with \calc{tdump} }{\small \ctprun \sql \sqlstate \opt \xmloptions \exe \calc{tdump} }
+\votcacommand{Writing a mapped trajectroy with \calc{tdump} }{\small \xtprun \sql \sqlstate \opt \xmloptions \exe \calc{tdump} }
 
 It also reads in the state file but appends the coordinates to a pdb. file. So make sure to delete old QM.pdb and MD.pdb if you want to create a new imagef
 
