--- a/manual/titlepage.tex
+++ b/manual/titlepage.tex
@@ -3,7 +3,7 @@
 %\center{\fontsize{4cm}{5cm}\selectfont VOTCA-CT}
 %\center{\fontsize{1.5cm}{3cm}\selectfont USER MANUAL}
 
-\center{\huge \sc VOTCA-CTP \\ \vspace*{1cm} Charge Transport Simulations}
+\center{\huge \sc VOTCA-XTP \\ \vspace*{1cm} Exciton Transport Simulations}
 \vspace*{1cm}
 \center{\Large \sc User Manual}
 
@@ -45,10 +45,10 @@ Victor R\"uhle, Christoph Junghans, Alexander Lukyanov, Kurt Kremer and Denis An
 {http://dx.doi.org/10.1021/ct900369w}
 
 \section*{Development}
-The core development is currently taking place at the Max Planck Institute for Polymer Research, Mainz, Germany.
+The core development is currently taking place at the Max Planck Institute for Polymer Research, Mainz, Germany and TU/e Eindhoven.
 
 \section*{Copyright}
-\votcactp is free software. The entire package is available under the Apache License. For details, check
-the LICENSE file in the source code. The \votcactp source code is available on our homepage, \htmladdnormallink{\color{black}www.votca.org}{http://www.votca.org}.
+\votcaxtp is free software. The entire package is available under the Apache License. For details, check
+the LICENSE file in the source code. The \votcaxtp source code is available on our homepage, \htmladdnormallink{\color{black}www.votca.org}{http://www.votca.org}.
 
 \vfill
