--- a/manual/xtp_manual.tex
+++ b/manual/xtp_manual.tex
@@ -27,7 +27,7 @@
 
 
 
-\usepackage[tikz]{bclogo}
+%\usepackage[tikz]{bclogo}
 % \usepackage[framemethod=tikz]{mdframed}
 \usepackage{lipsum}
 
@@ -79,9 +79,9 @@ pdfpagemode=UseNone]{hyperref}
 %%%%%%%% TESTING
 
 
-\usepackage{tikz}
-\usetikzlibrary{shapes,shadows,arrows}
-\usetikzlibrary{positioning}
+%\usepackage{tikz}
+%\usetikzlibrary{shapes,shadows,arrows}
+%\usetikzlibrary{positioning}
 
 
 
