manual: hgid -> gitid

--- a/manual/titlepage.tex
+++ b/manual/titlepage.tex
@@ -12,8 +12,7 @@
 \vspace*{1cm}
 \vfill
 
-\center{\footnotesize{compiled from: \hgid}}
-%\center{\footnotesize{Programs version: \refhgid}}
+\center{\footnotesize{compiled from: \gitid}}
 %\vspace*{1cm}
 %\center{
 %\large{\copyright \hspace*{0.1cm} VOTCA development team}
